--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   change_app_package_name: ^1.1.0
   supabase_flutter: ^1.10.25
+  animated_text_field: ^0.0.1+2
+  gap: ^3.0.1
+  flutter_easyloading: ^3.0.5
+  flutter_advanced_drawer: ^1.3.6
+  form_builder_image_picker: ^3.1.0
+  image_picker: ^0.8.9
+  fk_toggle: ^0.1.4
+  vph_web_date_picker: ^0.0.5
+  page_route_animator: ^1.0.3
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
